# lms_vosp_diploma

./: README.md  index.html  package-lock.json  package.json  tsconfig.json
course/: main.lkcourse  manifest.json
course/lectures/: lecture_optical_amplifiers.json  lecture_optical_emitters.json  lecture_optical_receivers.json  lecture_passive_components.json
course/tests/: test_optical_emitters.json
src/: main.tsx  routes.tsx  theme.ts
src-tauri/: .gitignore  Cargo.toml  main.lkcourse  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/main/lectures/: lecture_optical_amplifiers.json  lecture_optical_emitters.json  lecture_optical_receivers.json  lecture_passive_components.json
src-tauri/main/tests/: test_optical_amplifiers.json  test_optical_emitters.json  test_optical_receivers.json  test_passive_components.json
src-tauri/src/: lib.rs  main.rs  reader.rs
src-tauri/src/models/: lessons.rs  manifest.rs  mod.rs  slides.rs  student.rs  tests.rs
src/components/: CustomButton.tsx  Toolbar.tsx
src/models/: Lecture.ts  LessonModel.ts  StudentModel.ts  TestModel.ts
src/repositories/: LessonRepository.ts  StudentRepository.ts  TestRepository.ts
src/resources/: Cable.tsx  UrTISIBanner.tsx
src/screens/: index.ts
src/screens/LessonScreen/: BaseLessonProps.ts  LectureLessonScreen.tsx  LessonScreen.tsx  TestLessonScreen.tsx  index.ts
src/screens/LessonsScreen/: LessonItem.tsx  LessonsScreen.tsx  index.ts
src/screens/LoginScreen/: LoginScreen.tsx
src/screens/TitleScreen/: TitleScreen.tsx  (+1 more)
src/slides/: constants.ts
src/utils/: useKonamiCode.ts
(+24 files in other folders)
