[package]
name = "vosp"
version = "0.1.0"
description = "Пассивные и активные оптические компоненты ВОСП"
authors = ["levkopo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vosp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.5.0"
rand = "0.9.1"
zip = "4.0.0"
once_cell = "1.21.1"
tauri-plugin-process = "2.2.1"

